# ScaleAI

./: README.md  main.py  pyproject.toml
app/engine/: fight_engine.py
app/models/: character.py  fight_engine.py
app/services/: database.py  narrator.py  scraper.py  test_narrator.py
